--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-map-gl": "^6.1.15",
     "react-mapbox-gl-geocoder": "^1.1.0",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
