--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-map-gl-geocoder": "^2.1.6",
     "react-mapbox-gl-geocoder": "^1.1.0",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toggle": "^4.1.2",
     "web-vitals": "^0.2.4",
