add push notif backend

--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "rules": {
+      "react-hooks/exhaustive-deps": 0
+    },
     "extends": [
       "react-app",
       "react-app/jest"
