--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,18 +1,25 @@
 asgiref==3.3.4
-autopep8==1.5.7
+autopep8==1.5.6
 certifi==2020.12.5
 chardet==4.0.0
-Django==3.2.3
+Django==3.2
+django-background-tasks==1.2.5
+django-compat==1.0.15
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
+gunicorn==20.1.0
 idna==2.10
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pusher-push-notifications==2.0.1
 pycodestyle==2.7.0
-PyJWT==2.1.0
+PyJWT==2.0.1
 pytz==2021.1
 requests==2.25.1
 six==1.16.0
+soupsieve==2.2.1
 sqlparse==0.4.1
 toml==0.10.2
 urllib3==1.26.4
+whitenoise==5.2.0
